--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -10,8 +10,8 @@
                 </span>
                 <form class="" *ngIf="!OTPFormDisplay" #loginFormTag (submit)="login()" [formGroup]="loginForm">
                     <div class="p-inputtext-sm w-full mb-4">
-                        <label for="mobile_number"d>Mobile Number:</label><br>
-                        <input type="number" for="mobile_number" pInputText class="w-full mt-2" placeholder="Enter your mobile number" formControlName="mobile_number">
+                        <label for="phone"d>Mobile Number:</label><br>
+                        <input type="number" for="phone" pInputText class="w-full mt-2" placeholder="Enter your mobile number" formControlName="phone">
                     </div>
 
                     <div class="flex justify-content-center align-items-center ">
