--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -1,6 +1,7 @@
 <div class="limiter">
     <div class="container-login">
         <div class="wrap-login">
+            <button (click)="start('refer')" pButton type="button" label="Refer" class="p-button-warning w-5 mb-5"></button>
             
             <div class="flex justify-content-between"> 
                 <button (click)="start('start-ride')" pButton type="button" label="Book a ride" class="p-button-warning w-5"></button>
