--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,3 +1,40 @@
+<div class="flex h-screen px-3">
+    <div class="p-5 w-5 flex flex-column justify-content-center align-items-center">
+        <div class="wrap-login">
+            <div class="login-form validate-form">    
+                <span class="login-form-title my-3">
+                    Log in
+                </span>
+                <form class="" *ngIf="!OTPFormDisplay" #loginFormTag (submit)="login()" [formGroup]="loginForm">
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="phone"d>Mobile Number:</label><br>
+                        <input type="number" for="phone" pInputText class="w-full mt-2" placeholder="Enter your mobile number" formControlName="phone">
+                        <small class="p-invalid" style="color:red" *ngIf="phone.hasError('required') && phone.touched">This field is required!</small>
+                    </div>
+
+                    <div class="flex justify-content-center align-items-center ">
+                        <button pButton type="submit" label="SEND OTP" class="p-button-success" [disabled]="loginForm.invalid || loginBtn" icon="" [loading]="loginBtn"></button>
+                    </div>
+                </form>
+
+                
+                <form class="" *ngIf="OTPFormDisplay" #verifyOTPFormTag (submit)="verifyOTP()" [formGroup]="verifyOTPForm">
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="verifyOTP"d>Enter OTP:</label><br>
+                        <input type="number" for="verifyOTP" pInputText class="w-full mt-2" placeholder="Enter OTP here" formControlName="verifyOTP">
+                    </div>
+
+                    <div class="flex justify-content-center align-items-center ">
+                        <button pButton type="submit" label="VERIFY OTP" class="p-button-success" [disabled]="verifyOTPForm.invalid || verifyOTPBtn" icon="" [loading]="verifyOTPBtn"></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="w-7"></div>
+</div>
+<p-toast></p-toast>
+<!-- 
 <div class="limiter">
     <div class="container-login">
         <div class="wrap-login">
@@ -33,5 +70,4 @@
             </div>
         </div>
     </div>
-</div>
-<p-toast></p-toast>
+</div> -->
