--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -55,87 +55,115 @@
 
   /*//////////////////////////////////////////////////////////////////
   [ login ]*/
-  
-  .limiter {
-    width: 100%;
-    margin: 0 auto;
-    .container-login {
-        width: 100%;  
-        min-height: 100vh;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
 
-        z-index: 1;  
-        .wrap-login {
-            width: 500px;
-            border-radius: 10px;
-            overflow: hidden;
-            padding: 55px 55px 37px 55px;
+  .wrap-login {
+    width: 500px;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 55px 55px 37px 55px;
+    -webkit-box-shadow: 2px 2px 8px 0px #ccc;
+    -moz-box-shadow: 2px 2px 8px 0px #ccc;
+    box-shadow: 2px 2px 8px 0px #ccc;
+    border: 1px solid #ccc;
+    background: #fff;
+    .login-form {
+        width: 100%;
+          .login-form-title {
+            font-family: Poppins-Medium;
+            font-size: 30px;
+            color: #000;
+            line-height: 1.2;
+            text-align: center;
+            text-transform: uppercase;
           
-            background: #9152f8;
-            background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-            background: -o-linear-gradient(top, #7579ff, #b224ef);
-            background: -moz-linear-gradient(top, #7579ff, #b224ef);
-            background: linear-gradient(top, #7579ff, #b224ef);
-            .login-form {
-                width: 100%;
-                .login-form-logo {
-                    font-size: 60px; 
-                    color: #333333;
-                  
-                    display: -webkit-box;
-                    display: -webkit-flex;
-                    display: -moz-box;
-                    display: -ms-flexbox;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 120px;
-                    height: 120px;
-                    border-radius: 50%;
-                    background-color: #fff;
-                    margin: 0 auto;
-                    img{
-                        width: 100%;
-                        height: 100%;
-                    }
-                  }
-                  .login-form-title {
-                    font-family: Poppins-Medium;
-                    font-size: 30px;
-                    color: #fff;
-                    line-height: 1.2;
-                    text-align: center;
-                    text-transform: uppercase;
-                  
-                    display: block;
-                  }
-                  label{
-                    color: #ddd;
-                  }
-              }
+            display: block;
+          }
+          label{
+            color: #000;
           }
       }
-      
-      .container-login::before {
-        content: "";
-        display: block;
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: rgba(255,255,255,0.9);
-      }
   }
+  
+  // .limiter {
+  //   width: 100%;
+  //   margin: 0 auto;
+  //   .container-login {
+  //       width: 100%;  
+  //       min-height: 100vh;
+  //       display: -webkit-box;
+  //       display: -webkit-flex;
+  //       display: -moz-box;
+  //       display: -ms-flexbox;
+  //       display: flex;
+  //       flex-wrap: wrap;
+  //       justify-content: center;
+  //       align-items: center;
+  //       padding: 15px;
+
+  //       z-index: 1;  
+  //       .wrap-login {
+  //           width: 500px;
+  //           border-radius: 10px;
+  //           overflow: hidden;
+  //           padding: 55px 55px 37px 55px;
+          
+  //           background: #9152f8;
+  //           background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+  //           background: -o-linear-gradient(top, #7579ff, #b224ef);
+  //           background: -moz-linear-gradient(top, #7579ff, #b224ef);
+  //           background: linear-gradient(top, #7579ff, #b224ef);
+  //           .login-form {
+  //               width: 100%;
+  //               .login-form-logo {
+  //                   font-size: 60px; 
+  //                   color: #333333;
+                  
+  //                   display: -webkit-box;
+  //                   display: -webkit-flex;
+  //                   display: -moz-box;
+  //                   display: -ms-flexbox;
+  //                   display: flex;
+  //                   justify-content: center;
+  //                   align-items: center;
+  //                   width: 120px;
+  //                   height: 120px;
+  //                   border-radius: 50%;
+  //                   background-color: #fff;
+  //                   margin: 0 auto;
+  //                   img{
+  //                       width: 100%;
+  //                       height: 100%;
+  //                   }
+  //                 }
+  //                 .login-form-title {
+  //                   font-family: Poppins-Medium;
+  //                   font-size: 30px;
+  //                   color: #fff;
+  //                   line-height: 1.2;
+  //                   text-align: center;
+  //                   text-transform: uppercase;
+                  
+  //                   display: block;
+  //                 }
+  //                 label{
+  //                   color: #ddd;
+  //                 }
+  //             }
+  //         }
+  //     }
+      
+  //     .container-login::before {
+  //       content: "";
+  //       display: block;
+  //       position: absolute;
+  //       z-index: -1;
+  //       width: 100%;
+  //       height: 100%;
+  //       top: 0;
+  //       left: 0;
+  //       background-color: rgba(255,255,255,0.9);
+  //     }
+  // }
   
 
   /*------------------------------------------------------------------
