--- a/frontend/src/app/refer/refer.component.html
+++ b/frontend/src/app/refer/refer.component.html
@@ -1,21 +1,11 @@
-<div class="limiter">
+<!-- <div class="limiter">
     <div class="container-login">
         <div class="wrap-login">
             <h2 class="text-center">Refer a user</h2><hr class="my-2">
-            <form class="" (submit)="addNewRefer()" [formGroup]="referForm">
-                <div class="p-inputtext-sm w-full mb-4">
-                    <label for="mobile"d>Enter mobile number:</label><br>
-                    <input type="text" for="mobile" pInputText class="w-full mt-2" placeholder="Enter user mobile" formControlName="mobile">
-                    <small class="p-invalid" style="color:red" *ngIf="mobile.hasError('required') && mobile.touched">This field is required!</small>
-                </div>
-        
-                <div class="flex justify-content-center align-items-center ">
-                    <button pButton type="submit" label="SUBMIT" class="p-button-success" [disabled]="referForm.invalid || referAddBtn" icon="" [loading]="referAddBtn"></button>
-                </div>
-            </form>
+            
 
-            <!-- refer user list -->
-            <h2 class="text-center">Refer user list</h2><hr class="my-2">
+     
+            <h2 class="text-center">Refer user list</h2><hr class="my-2"> -->
             <!-- <div class="flex flex-column"> 
                 <p-card class="w-full mb-3" *ngFor="let vehicles of allVehicles">
                     <div class="flex justify-content-between align-items-center w-full">
@@ -36,7 +26,7 @@
                     </div>
                 </p-card>
             </div> -->
-            <div> 
+            <!-- <div> 
                     <p-table [value]="referUserList" >
                         <ng-template pTemplate="header">
                             <tr>
@@ -56,7 +46,46 @@
             </div>
         </div>
     </div>
+</div> -->
+
+
+<div class="flex max-h-screen">
+    <div class="w-5 mt-3 mb-5 flex flex-column justify-content-center align-items-center">
+        <div class="wrap-login ">
+            <div class="login-form validate-form">
+                <span class="login-form-title my-3">
+                    Refer a user
+                </span>
+                <form class="" (submit)="addNewRefer()" [formGroup]="referForm" class="flex flex-column mb-5">
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="mobile"d>Enter mobile number:</label><br>
+                        <input type="text" for="mobile" pInputText class="w-full mt-2" placeholder="Enter user mobile" formControlName="mobile">
+                        <small class="p-invalid" style="color:red" *ngIf="mobile.hasError('required') && mobile.touched">This field is required!</small>
+                    </div>
+                    <button pButton type="submit" label="REFER" class="p-button-success" [disabled]="referForm.invalid || referAddBtn" icon="" [loading]="referAddBtn"></button>
+                </form>
+                <span class="login-form-title my-3">
+                    your Refer history
+                </span>
+                <div>
+                    <p-table [value]="referUserList" >
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th>Phone Number</th>
+                                <th>Date</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-product>
+                            <tr>
+                                <td>{{product.referredPhone| slice:3:13}}</td>
+                                <td>{{product.createdAt | date: 'mediumDate'}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-7"></div>
 </div>
-
-
 <p-toast></p-toast>
