--- a/frontend/src/app/refer/refer.component.scss
+++ b/frontend/src/app/refer/refer.component.scss
@@ -56,42 +56,33 @@ body, html, label {
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
 
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-  .container-login {
-      width: 100%;  
-      min-height: 100vh;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      padding: 15px;
-
-      z-index: 1;  
-      .wrap-login {
-          width: 40%;
-          border-radius: 10px;
-          overflow: hidden;
-          padding: 55px 55px 37px 55px;
-          background: #7579ff;
-          background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-          background: -o-linear-gradient(top, #7579ff, #b224ef);
-          background: -moz-linear-gradient(top, #7579ff, #b224ef);
-          background: linear-gradient(top, #7579ff, #b224ef);
-          // :host ::ng-deep .p-card{
-          //     padding: 0;
-          //     margin: 0;
-          // }
+.wrap-login {
+  width: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 55px 55px 37px 55px;
+  -webkit-box-shadow: 2px 2px 8px 0px #ccc;
+  -moz-box-shadow: 2px 2px 8px 0px #ccc;
+  box-shadow: 2px 2px 8px 0px #ccc;
+  border: 1px solid #ccc;
+  background: #fff;
+  .login-form {
+      width: 100%;
+        .login-form-title {
+          font-family: Poppins-Medium;
+          font-size: 30px;
+          color: #000;
+          line-height: 1.2;
+          text-align: center;
+          text-transform: uppercase;
+        
+          display: block;
+        }
+        label{
+          color: #000;
         }
     }
-    
 }
-
 
 /*------------------------------------------------------------------
 [ Responsive ]*/
