--- a/frontend/src/app/trip/start-trip/start-trip.component.scss
+++ b/frontend/src/app/trip/start-trip/start-trip.component.scss
@@ -1,108 +1,98 @@
 
  .p-field * {
-    display: block;
+  display: block;
 }
 
 :host ::ng-deep .p-inputtext {
-    border-radius: 0px;
-    font-size: 16px;
-    font-family: '"Helvetica Neue", Helvetica, sans-serif',
+  border-radius: 0px;
+  font-size: 16px;
+  font-family: '"Helvetica Neue", Helvetica, sans-serif',
 }
 
 :host ::ng-deep .p-inputtext.ng-invalid.ng-touched {
-    border: 1px solid red;
+  border: 1px solid red;
 }
 
 :host ::ng-deep .p-inputtext:focus {
-    outline: none;
-    box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
 @font-face {
-    font-family: Poppins-Regular;
-    src: url('./../../../assets/fonts/poppins/Poppins-Regular.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-Medium;
-    src: url('./../../../assets/fonts/poppins/Poppins-Medium.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-Bold;
-    src: url('./../../../assets/fonts/poppins/Poppins-Bold.ttf'); 
-  }
-  
-  @font-face {
-    font-family: Poppins-SemiBold;
-    src: url('./../../../assets/fonts/poppins/Poppins-SemiBold.ttf'); 
-  }
-  
-  
-  
-  
-  /*//////////////////////////////////////////////////////////////////
-  [ RESTYLE TAG ]*/
-  
-  body, html, label {
-      height: 100%;
-      font-family: Poppins-Regular, sans-serif;
-  }
-  
+  font-family: Poppins-Regular;
+  src: url('./../../../assets/fonts/poppins/Poppins-Regular.ttf'); 
+}
 
-  /*//////////////////////////////////////////////////////////////////
-  [ login ]*/
-  
-  .limiter {
-    width: 100%;
-    margin: 0 auto;
-    .container-login {
-        width: 100%;  
-        min-height: 100vh;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+@font-face {
+  font-family: Poppins-Medium;
+  src: url('./../../../assets/fonts/poppins/Poppins-Medium.ttf'); 
+}
 
-        z-index: 1;  
-        .wrap-login {
-            width: 40%;
-            border-radius: 10px;
-            overflow: hidden;
-            padding: 55px 55px 37px 55px;
-            background: #9152f8;
-            background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-            background: -o-linear-gradient(top, #7579ff, #b224ef);
-            background: -moz-linear-gradient(top, #7579ff, #b224ef);
-            background: linear-gradient(top, #7579ff, #b224ef);
-            // :host ::ng-deep .p-card{
-            //     padding: 0;
-            //     margin: 0;
-            // }
-          }
-      }
-      
-  }
+@font-face {
+  font-family: Poppins-Bold;
+  src: url('./../../../assets/fonts/poppins/Poppins-Bold.ttf'); 
+}
+
+@font-face {
+  font-family: Poppins-SemiBold;
+  src: url('./../../../assets/fonts/poppins/Poppins-SemiBold.ttf'); 
+}
 
 
-  /*------------------------------------------------------------------
-  [ Responsive ]*/
-  
-  @media (max-width: 576px) {
-    .wrap-login {
-      padding: 55px 15px 37px 15px;
+
+
+/*//////////////////////////////////////////////////////////////////
+[ RESTYLE TAG ]*/
+
+body, html, label {
+    height: 100%;
+    font-family: Poppins-Regular, sans-serif;
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ login ]*/
+
+.wrap-login {
+  width: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 55px 55px 37px 55px;
+  -webkit-box-shadow: 2px 2px 8px 0px #ccc;
+  -moz-box-shadow: 2px 2px 8px 0px #ccc;
+  box-shadow: 2px 2px 8px 0px #ccc;
+  border: 1px solid #ccc;
+  background: #fff;
+  .login-form {
+      width: 100%;
+        .login-form-title {
+          font-family: Poppins-Medium;
+          font-size: 30px;
+          color: #000;
+          line-height: 1.2;
+          text-align: center;
+          text-transform: uppercase;
+        
+          display: block;
+        }
+        label{
+          color: #000;
+        }
     }
+}
+
+/*------------------------------------------------------------------
+[ Responsive ]*/
+
+@media (max-width: 576px) {
+  .wrap-login {
+    padding: 55px 15px 37px 15px;
   }
-  
-  
-  
-  
-  
+}
+
+
+
+
