--- a/frontend/src/app/history/rider/rider.component.html
+++ b/frontend/src/app/history/rider/rider.component.html
@@ -3,11 +3,10 @@
         <div class="wrap-login">
             <div class="login-form validate-form">
                 
-                <div class="flex justify-content-between mb-4">
-                    <span class="login-form-title">
-                        Choose A vehicle
+                <div class="flex justify-content-center mb-4">
+                    <span class="login-form-title text-center">
+                        Ride History
                     </span>
-                    <button (click)="displayModal = true" pButton type="button" label="" class="p-button-success p-button-rounded p-button-sm" icon="pi pi-plus"></button>
                 </div>
     
                 <div class="flex flex-column"> 
