--- a/frontend/src/app/rider/start-ride/start-ride.component.scss
+++ b/frontend/src/app/rider/start-ride/start-ride.component.scss
@@ -1,3 +1,11 @@
+table, th, td {
+  border: 1px solid #ddd;
+  border-collapse: collapse;
+}
+td{
+  padding: 10px 5px;
+}
+
 
  .p-field * {
   display: block;
