--- a/frontend/src/app/trip/trip-details/trip-details.component.html
+++ b/frontend/src/app/trip/trip-details/trip-details.component.html
@@ -1,38 +1,49 @@
-<div class="limiter">
-    <div class="container-login">
+<div class="flex max-h-screen">
+    <div class="w-5 mt-3 mb-5 flex flex-column justify-content-center align-items-center">
         <div class="wrap-login">
+            <div class="login-form validate-form">
+                <span class="login-form-title my-3">
+                    Start a trip
+                </span>
+                <form class="" (submit)="tripDetails()" [formGroup]="tripDetailsForm">
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="source"d>Source:</label><br>
+                        <input type="text" for="source" pInputText class="w-full mt-2" placeholder="Enter trip source" formControlName="source">
+                        <small class="p-invalid" style="color:red" *ngIf="source.hasError('required') && source.touched">This field is required!</small>
+                    </div>
             
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="destination"d>Destination:</label><br>
+                        <input type="text" for="destination" pInputText class="w-full mt-2" placeholder="Enter trip destination" formControlName="destination">
+                        <small class="p-invalid" style="color:red" *ngIf="destination.hasError('required') && destination.touched">This field is required!</small>
+                    </div>
+                    
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="startDate"d>Start Date & Time:</label><br>
+                        <p-calendar inputId="basic" dateFormat="dd.mm.yy" [showTime]="true" [hourFormat]="'12'" styleClass="w-full mt-2" formControlName="startDate" placeholder="Enter trip start date and time" [minDate]="minDate" [readonlyInput]="true"></p-calendar>
+                        <small class="p-invalid" style="color:red" *ngIf="startDate.hasError('required') && startDate.touched">This field is required!</small>
+                    </div>
+            
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="availableSeats"d>Available Seats:</label><br>
+                        <input type="number" for="availableSeats" pInputText class="w-full mt-2" placeholder="Enter number of available seats" formControlName="availableSeats">
+                        <small class="p-invalid" style="color:red" *ngIf="availableSeats.hasError('required') && availableSeats.touched">This field is required!</small>
+                    </div>
+            
+                    <div class="p-inputtext-sm w-full mb-4">
+                        <label for="fare"d>Fare:</label><br>
+                        <input type="number" for="fare" pInputText class="w-full mt-2" placeholder="Enter trip fare" formControlName="fare">
+                        <small class="p-invalid" style="color:red" *ngIf="fare.hasError('required') && fare.touched">This field is required!</small>
+                    </div>
+            
+                    <div class="flex justify-content-center align-items-center ">
+                        <button pButton type="submit" label="SUBMIT" class="p-button-success" [disabled]="tripDetailsForm.invalid || tripDetailsBtn" icon="" [loading]="tripDetailsBtn"></button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
+    <div class="w-7"></div>
 </div>
-
-<!-- <p-dialog header="Trip Details" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
-    [draggable]="false" [resizable]="false">
-    <form class="" (submit)="registerVehicle()" [formGroup]="registerVehicleForm">
-        <div class="p-inputtext-sm w-full mb-4">
-            <label for="source"d>Source:</label><br>
-            <input type="text" for="source" pInputText class="w-full mt-2" placeholder="Enter trip source" formControlName="source">
-        </div>
-
-        <div class="p-inputtext-sm w-full mb-4">
-            <label for="destination"d>Destination:</label><br>
-            <input type="text" for="destination" pInputText class="w-full mt-2" placeholder="Enter trip destination" formControlName="destination">
-        </div>
-
-        <div class="p-inputtext-sm w-full mb-4">
-            <label for="capacity"d>Capacity:</label><br>
-            <input type="number" for="capacity" pInputText class="w-full mt-2" placeholder="Enter capacity" formControlName="capacity">
-        </div>
-        
-        <div class="p-inputtext-sm w-full mb-4">
-            <label for="startTime"d>Start Time:</label><br>
-            <input type="text" for="startTime" pInputText class="w-full mt-2" placeholder="Enter trip start time" formControlName="startTime">
-        </div>
-
-        <div class="flex justify-content-center align-items-center ">
-            <button pButton type="submit" label="SUBMIT" class="p-button-success" [disabled]="registerVehicleForm.invalid || registerVehicleBtn" icon="" [loading]="registerVehicleBtn"></button>
-        </div>
-    </form>
-</p-dialog> -->
 
 <p-toast></p-toast>
